# openacd

./: .tarball-revision  Makefile.am  Makefile.in  aclocal.m4  common.am  configure  configure.ac  erlang-app.am  reach-app.spec  relx  relx.config.in  start-dev.sh
apps/reach_core/: Makefile.am  Makefile.in
apps/reach_core/include/: agent.hrl  call.hrl  gen_media.hrl  gen_spec.hrl  queue.hrl
apps/reach_core/src/: agent.erl  agent_auth.erl  agent_auth_ets.erl  agent_auth_multi.erl  agent_channel.erl  agent_manager.erl  agent_state_manager.erl  call_queue.erl  call_queue_config.erl  cdr.erl  conference_manager.erl  cook.erl  cpx.erl  cpx_agent_connection.erl  cpx_agent_rpc.erl  cpx_ctl.erl  cpx_endpoint.erl  cpx_hooks.erl  cpx_json_util.erl  cpx_media_dummy.erl  cpx_recordings.erl  cpx_supervisor.erl  gen_media.erl  gen_media_util.erl  queue_manager.erl  reach_config_reloader.erl  reach_core.app.src  reach_node_monitor.erl  util.erl
apps/reach_freeswitch/: Makefile.am  Makefile.in
apps/reach_freeswitch/src/: freeswitch_conference.erl  freeswitch_dialer.erl  freeswitch_fetch_handler.erl  freeswitch_media.erl  freeswitch_media_manager.erl  freeswitch_monitor.erl  freeswitch_outbound.erl  freeswitch_ring.erl  freeswitch_ring_persistent.erl  freeswitch_ring_transient.erl  freeswitch_util.erl  freeswitch_voicemail.erl  oacd_freeswitch.app.src.in  oacd_freeswitch_app.erl  oacd_freeswitch_sup.erl  reach_freeswitch.app.src
apps/reach_ouc/: Gruntfile.js  Makefile.am  Makefile.in  README  package.json
apps/reach_ouc/include/: oacd_ouc.hrl  ouc_recordings.hrl  ouc_rstat.hrl
apps/reach_ouc/priv/scripts/: call_segment_fact_table_tmp.js
apps/reach_ouc/priv/scripts/reach-csf/: call_segment_facts.js  package.json
apps/reach_ouc/site/fonts/icomoon/: index.html  lte-ie7.js  style.css
apps/reach_ouc/site/fonts/icomoon/fonts/: icomoon.eot
apps/reach_ouc/site/gadgets/: index.html  test-page.js
apps/reach_ouc/site/gadgets/agent-manager/meta/: agent-manager.json  test-data.json
apps/reach_ouc/site/gadgets/agent-manager/scripts/: agent-manager.js
apps/reach_ouc/site/gadgets/agent-manager/styles/: agent-manager.less
apps/reach_ouc/site/gadgets/agent-manager/templates/: agent-manager.html
apps/reach_ouc/site/gadgets/agent-state/meta/: agent-state.json  test-data.json
apps/reach_ouc/site/gadgets/agent-state/scripts/: agent-state.js
apps/reach_ouc/site/gadgets/agent-state/styles/: agent-state.less
apps/reach_ouc/site/gadgets/agent-state/templates/: agent-state.html
apps/reach_ouc/site/gadgets/call-recording/meta/: call-recording.json  test-data.json
apps/reach_ouc/site/gadgets/call-recording/scripts/: call-recording.js
apps/reach_ouc/site/gadgets/call-recording/styles/: call-recording.less
apps/reach_ouc/site/gadgets/call-recording/templates/: call-recording.html
apps/reach_ouc/site/gadgets/my-statistics/meta/: my-statistics.json  test-data.json
apps/reach_ouc/site/gadgets/my-statistics/scripts/: my-statistics.js
apps/reach_ouc/site/gadgets/my-statistics/styles/: my-statistics.less
apps/reach_ouc/site/gadgets/my-statistics/templates/: my-statistics.html
apps/reach_ouc/site/gadgets/outbound-call/meta/: outbound-call.json
apps/reach_ouc/site/gadgets/outbound-call/scripts/: outbound-call.js
apps/reach_ouc/site/gadgets/outbound-call/styles/: outbound-call.less
apps/reach_ouc/site/gadgets/outbound-call/templates/: outbound-call.html
apps/reach_ouc/site/gadgets/queue-manager/meta/: queue-manager.json  test-data.json
apps/reach_ouc/site/gadgets/queue-manager/scripts/: queue-manager.js
apps/reach_ouc/site/gadgets/queue-manager/styles/: queue-manager.less
apps/reach_ouc/site/gadgets/queue-manager/templates/: queue-manager.html
apps/reach_ouc/site/images/bootstrap/: dashboard-container-bg
apps/reach_ouc/site/scripts/: dashboard-page.js  debug.js  defaults.js  init.js  login-page.js
apps/reach_ouc/site/scripts/app/: config.js  dashboard.js  login.js
apps/reach_ouc/site/styles/: bootstrap.css  dashboard.css  gadget.css  icomoon.css  jquery-ui-1.10.3.custom.css  login.css  main.css
apps/reach_ouc/src/: oacd_ouc_app.erl  oacd_ouc_sup.erl  ouc_agent_event_handler.erl  ouc_agent_info.erl  ouc_agent_listener.erl  ouc_agent_profiles.erl  ouc_agent_report_job.erl  ouc_agent_wsock_handler.erl  ouc_agents.erl  ouc_call_monitor.erl  ouc_call_recording_migration.erl  ouc_call_recordings_h.erl  ouc_call_segment_report_job.erl  ouc_calls.erl  ouc_cdr_mongo.erl  ouc_config.erl  ouc_cowboy_util.erl  ouc_dashboard_h.erl  ouc_db.erl  ouc_db_master.erl  ouc_db_redis.erl  ouc_error.erl  ouc_gen_media_listener.erl  ouc_handler_util.erl  ouc_login_advanced_h.erl  ouc_login_dup_h.erl  ouc_login_h.erl  ouc_logout_h.erl  ouc_queues.erl  ouc_records.erl  ouc_redis_agent_report_job.erl  ouc_reports_h.erl  ouc_root_h.erl  ouc_rpc.erl  ouc_rpc_util.erl  ouc_rstat.erl  ouc_rstat_conf.erl  ouc_rstat_logger.erl  ouc_rstat_my_watcher.erl  ouc_rstat_prelogger.erl  (+19 more)
apps/reach_ouc/templates/: ouc_dashboard.dtl  ouc_dashboard_reports.dtl  ouc_dashboard_widget.dtl  ouc_login.dtl  ouc_login_advanced.dtl  ouc_login_dup.dtl  ouc_main.dtl
apps/reach_ouc/test/: ouc_db_redis_eunit.erl  ouc_rstat_conf_props.erl  ouc_rstat_mnesia_props.erl  ouc_rstat_rule_props.erl  ouc_rstat_store_props.erl  ouc_rstat_types.erl  ouc_test_util.erl
files/: Makefile.am  Makefile.in  lager.config.in  reach.in  sys.config.in  vm.args.in
(+51 files in other folders)
